More theme changes (still need to do it correctly)

--- a/emacs.org
+++ b/emacs.org
@@ -78,6 +78,7 @@ You can also use =M-x auto-package-update-now= to update right now!
   (setq visible-bell t)                      ; Set up the visible bell
   (save-place-mode 1)                        ; Open file where last visited
   (add-hook 'text-mode-hook 'flyspell-mode)  ; enable spellcheck on text mode
+  (setq Buffer-menu-name-width 35)           ; give name more room
   ;; (add-hook 'prog-mode-hook 'hl-line-mode)   ; highlight lines when programming
 
   ;; The following helps syncing
@@ -1098,32 +1099,39 @@ Following the tutorial [[https://emacs.cafe/emacs/orgmode/gtd/2017/06/30/orgmode
   (setq org-log-done 'time) ;; creates CLOSED time tag
   (setq org-log-into-drawer t) ;; creates a LOGBOOK drawer for notes
 
-  (setq org-agenda-custom-commands '(("d" "Dashboard"
-                                      ((agenda ""
-                                               ((org-deadline-warning-days 30)))
-                                       (todo "NEXT"
-                                             ((org-agenda-overriding-header "Next Un-Scheduled Tasks")))
-                                       (todo "TODO"
-                                             ((org-agenda-overriding-header "Active Un-Scheduled Tasks")))))
-                                     (" " "Agenda"
-                                      ((agenda ""
-                                               ((org-agenda-span 'day) (org-deadline-warning-days 365)))
-                                       (todo "TODO"
-                                             ((org-agenda-overriding-header "To Refile")
-                                              (org-agenda-files (list (concat org-directory "inbox.org")))))
-                                       (todo "NEXT"
-                                             ((org-agenda-overriding-header "In Progress")
-                                              (org-agenda-files (list (concat org-directory "projects.org")
-                                                                      (concat org-directory "next.org")
-                                                                      (concat org-directory "inbox.org")))))
-                                       (todo "TODO"
-                                             ((org-agenda-overriding-header "Projects")
-                                              (org-agenda-files (list (concat org-directory  "projects.org")))))
-                                       (todo "TODO"
-                                             ((org-agenda-overriding-header "One-off Tasks")
-                                              (org-agenda-files (list (concat org-directory  "next.org"))))
-                                             (org-agenda-skip-function '(org-agenda-skip-entry-if
-                                                                         'deadline 'scheduled)))))))
+  (setq org-agenda-custom-commands
+        '(("d" "Dashboard"
+           ((agenda ""
+                    ((org-deadline-warning-days 30)))
+            (todo "NEXT"
+                  ((org-agenda-overriding-header "Next Un-Scheduled Tasks")))
+            (todo "TODO"
+                  ((org-agenda-overriding-header "Active Un-Scheduled Tasks")))))
+
+          (" " "Agenda"
+           ((agenda ""
+                    ((org-agenda-span 'day)
+                     (org-deadline-warning-days 365)))
+
+            (todo "TODO"
+                  ((org-agenda-overriding-header "To Refile")
+                   (org-agenda-files (list (concat org-directory "inbox.org")))))
+
+            (todo "NEXT"
+                  ((org-agenda-overriding-header "In Progress")
+                   (org-agenda-files (list (concat org-directory "projects.org")
+                                           (concat org-directory "next.org")
+                                           (concat org-directory "inbox.org")))))
+
+            (todo "TODO"
+                  ((org-agenda-overriding-header "Projects")
+                   (org-agenda-files (list (concat org-directory  "projects.org")))))
+
+            (todo "TODO"
+                  ((org-agenda-overriding-header "One-off Tasks")
+                   (org-agenda-files (list (concat org-directory  "next.org"))))
+                  (org-agenda-skip-function '(org-agenda-skip-entry-if
+                                              'deadline 'scheduled)))))))
 
   (defun jmn-someday() "Quick access to someday.org (no links in agenda)"
          (interactive)
@@ -1138,7 +1146,7 @@ Following the tutorial [[https://emacs.cafe/emacs/orgmode/gtd/2017/06/30/orgmode
                                   (interactive "P")
                                   (org-agenda args " ")))
 
-  (setq org-agenda-todo-ignore-scheduled 'all)
+  (setq org-agenda-todo-ignore-scheduled 'all) ;; cant get it to work for deadlines
 #+end_src
 
 ** Habits
@@ -1149,7 +1157,7 @@ File holding habits must be added to =org-agenda-files= above
   (require 'org-habit)
   (add-to-list 'org-modules 'org-habit)
   (setq org-habit-graph-column
-        (assoc-default (system-name) '(("xps" . 55)
+        (assoc-default (system-name) '(("xps" . 56)
                                        ("dsk" . 52)))) ;; default is 40
 #+end_src
 
@@ -1161,25 +1169,26 @@ File holding habits must be added to =org-agenda-files= above
   - =C-c C-c= : adds tags to a heading
 
 #+begin_src emacs-lisp
-    (setq org-capture-templates
-          `(("t" "Todo [inbox]" entry
+  (setq org-capture-templates
+        `(("t" "Todo [inbox]" entry
+           (file ,(concat org-directory "inbox.org"))
+           "* TODO %i%?" :empty-lines 1)
+
+          ("T" "Todo Today [inbox]" entry
              (file ,(concat org-directory "inbox.org"))
-             "* TODO %i%?" :empty-lines 1)
+             "* TODO %?\nDEADLINE: %t" :empty-lines 1)
 
-            ("l" "Linked Todo [inbox]" entry
-             (file ,(concat org-directory "inbox.org"))
-             "* TODO %i%? \n %a" :empty-lines 1)
+          ("l" "Linked Todo [inbox]" entry
+           (file ,(concat org-directory "inbox.org"))
+           "* TODO %i%? \n %a" :empty-lines 1)
 
-            ("s" "Schedule" entry
-             (file+headline ,(concat org-directory "whip.org")  "Whip")
-             "* %i%? \n %U %^t" :empty-lines 1)
+          ("s" "Schedule" entry
+           (file+headline ,(concat org-directory "whip.org")  "Whip")
+           "* %i%? \n %U %^t" :empty-lines 1)
 
-            ("j" "Journal" entry
-             (file+datetree ,(concat org-directory "journal.org"))
-             "* %?\nEntered on %U\n  %i\n  %a"  :empty-lines 1)))
-
-
-
+          ("j" "Journal" entry
+           (file+datetree ,(concat org-directory "journal.org"))
+           "* %?\nEntered on %U\n  %i\n  %a"  :empty-lines 1)))
 #+end_src
 
 ** Archive
@@ -1213,7 +1222,7 @@ https://github.com/jethrokuan/.emacs.d/blob/master/init.el
     "Process a single item in the org-agenda."
     (interactive)
     (org-with-wide-buffer  ; what does this do?
-     (org-agenda-set-tags)
+     ;; (org-agenda-set-tags) ; may want in the future
      (org-agenda-priority)
      (org-agenda-set-effort)
      (org-agenda-refile nil nil t)))
@@ -1353,8 +1362,8 @@ More customization in Elisp. Supports Tramp.
     (set-face-background 'line-number
                          (face-attribute 'default :background))
 
-      (set-face-foreground 'default "PeachPuff3") ;; default "#ebdbb2"
-
+     (set-face-foreground 'default "gray75") ;; default "#ebdbb2"
+    (set-face-foreground 'default "moccasin") ;; default "#ebdbb2"
 
       (jmn-set-gruv-org-faces '((done-color . "gray35" ))))
 
@@ -1367,8 +1376,13 @@ More customization in Elisp. Supports Tramp.
     (set-face-background 'line-number
                          (face-attribute 'default :background))
 
-    (set-face-foreground 'default "PeachPuff3") ;; default "#ebdbb2"
-
+    ;; (set-face-foreground 'default "PeachPuff3") ;; default "#ebdbb2"
+    ;; (set-face-foreground 'default "gray75") ;; default "#ebdbb2"
+    ;; (set-face-foreground 'default "moccasin") ;; default "#ebdbb2"
+    (set-face-foreground 'default "bisque2") ;; default "#ebdbb2"
+    (set-face-foreground 'font-lock-comment-face  "#98be65") ;; default "#ebdbb2"
+    (set-face-foreground 'font-lock-string-face  "LightGoldenrod3")
+    (set-face-foreground 'font-lock-builtin-face  "Orange3")
     (jmn-set-gruv-org-faces '((done-color . "gray35" )
                               (org-block . "#282828"))))
 
@@ -1400,6 +1414,7 @@ More customization in Elisp. Supports Tramp.
                               (org-block . "#ebdbb2")))) ;; default "#f9f5d7"
 
 #+end_src
+
 *** Dark+
 - The modeline, when un-selected, has the same background as files, making it hard to delineation between vertically split windows.
 #+begin_src emacs-lisp :tangle no
@@ -1442,17 +1457,13 @@ More customization in Elisp. Supports Tramp.
                 ("HOLD" . ,(face-foreground font-lock-variable-name-face))))))
 #+end_src
 
-**  Default and time switches
- #+begin_src emacs-lisp
-   (jmn-load-gruvbox-dark-hard)
- #+end_src
-
 ** Default and time switches
 #+begin_src emacs-lisp
-  ;; (jmn-load-doom-one)
+   (jmn-load-gruvbox-dark-hard)
   ;; (run-at-time "7:00 am" nil #'jmn-load-doom-one-light)
   ;; (run-at-time "4:30 pm" nil #'jmn-load-doom-one)
 #+end_src
+
 * Localwords                                                       :noexport:
 #  LocalWords:  IDE solarized gruvbox vertico Magit Quickhelp Elpy Elisp Neotree Greduan's Localwords Esc  Smartparens UI Helpful's Yasnippet LSP Modeline Dap Flycheck modeline Treemacs backend lsp vterm eshell  Dired dracula clangd ui
 #  LocalWords:  Grammarly workspaces commenter Pyright CMake Flyspell
