--- a/linuxSetupDocs/reduceWindowTopbarHeightAndMakeDark.org
+++ b/linuxSetupDocs/reduceWindowTopbarHeightAndMakeDark.org
@@ -47,3 +47,11 @@ Write the following in =~/.config/gtk-3.0/gtk.css=
       min-height: 0;
   }
 #+end_src
+
+
+* Make topbar dark
+Place the following in =~/.config/gtk-3.0/settings.ini=
+#+begin_src js :tangle ~/.config/gtk-3.0/settings.ini  :mkdirp yes
+[Settings]
+gtk-application-prefer-dark-theme=1
+#+end_src
