display hidden files and directories first

--- a/emacs.org
+++ b/emacs.org
@@ -1061,7 +1061,7 @@ Following the tutorial [[https://emacs.cafe/emacs/orgmode/gtd/2017/06/30/orgmode
 - =C-c C-x e=  :   org-set-effort
 - =TAB=               :   open  agenda item in other window
 - =+=, =-= ,  =,=         :   increase, decrease, and set priority
-=Shft-right=  :  advance the todo state
+=Shift-right=  :  advance the todo state
 
 #+begin_src emacs-lisp
   ;; Org Agenda ;; (setq org-agenda-window-setup 'reorganize-frame)
