--- a/linuxSetupDocs/syncthing.org
+++ b/linuxSetupDocs/syncthing.org
@@ -9,3 +9,4 @@
 
 * Autostart
 Added =syncthing-start.desktop= from Syncthing's github to =~/.config/autostart=.
+- Or just add to startup applications via =Tweaks=. Both  do the _SAME_ thing.
