Improve Dashboard, rm gtd files from recentf, "C-x C-k" kill-buffer

--- a/linuxSetupDocs/fedoraSetupCheckbox.org
+++ b/linuxSetupDocs/fedoraSetupCheckbox.org
@@ -1,8 +1,19 @@
+#+TITLE: Loose Notes of Tasks After Linux Install
+#+STARTUP: showall
+
+Larger tasks are covered by their own documents in this same directory.
+This file is more of a check box for tasks without any significant steps.
+
+* Mount drive with =Disks= GUI tool
+Click gears for "edit mount options"
+- click off the user session
+- set Mount Point
+   - Pick a simple one since symlinks will come from here
 
 * Dropbox install
 setup the daemon (other thread)
 
-* gnome-extensions Tray Icons: Reloaded by MartinPL
+** gnome-extensions Tray Icons: Reloaded by MartinPL
 - needed to configure Dropbox
 
 * GNOME Tweaks (Tweaks)
@@ -11,26 +22,29 @@ setup the daemon (other thread)
 - Additional Layout options
    - make Caps additional Ctrl
 
-* install stow
-
-* Extensions
-- To check on Tray Icons: Reloaded
-
-* Caps to ctrl
+* Install stow
 
 * Deathwish's copr emacs-pgtk-nativecomp for emacs 29
+As of <2023-03-11 Sat>
 
 * Set keyboard shortcuts
+** Navigation
+** Windows
+** Switching
+- "M-TAB" to change application -- same as Windows machines
 
 * For 4k monitor, set to 2560x1440 for consistant sizing
 - have to do this because gnome does not have 150% scaling option
-
--
 
 * python
 #+begin_src shell
 supo dnf install python3 python3-numpy python3-scipy python3-matplotlib python3-pandas ipython
 #+end_src
 
+* install rmpfusion free
+- then install vlc
+
 * Change gnome-terminal settings
 - Colors to solarized
+
+* Install VSCode
