--- a/linuxSetupDocs/fedoraSetupCheckbox.org
+++ b/linuxSetupDocs/fedoraSetupCheckbox.org
@@ -48,3 +48,8 @@ supo dnf install python3 python3-numpy python3-scipy python3-matplotlib python3-
 - Colors to solarized
 
 * Install VSCode
+
+* git tokens/credentials
+#+begin_src shell
+git config credential.helper store
+#+end_src
