Org to HTML on save, fix long-lines function, add many keybindings

--- a/emacs.org
+++ b/emacs.org
@@ -1,3 +1,4 @@
+# -*- eval: (jmn-export-to-html-on-save) -*-
 #+TITLE: Emacs Configuration
 #+PROPERTY: header-args:emacs-lisp :tangle .emacs.d/init.el :results output silent
 #+STARTUP: overview
@@ -141,7 +142,7 @@ To ensure scrolling is fast in Emacs, disable  non-essential things while the wi
 Save backups in =.emacs.d=.
 #+begin_src emacs-lisp
   (setq backup-directory-alist
-        '( ("." . "~/.dotfiles/.emacs.d/filebackups")))
+        '( ("." . "~/.emacs.d/filebackups")))
 #+end_src
 
 *** Modeline
@@ -155,7 +156,7 @@ Save backups in =.emacs.d=.
 
   (use-package doom-modeline
     :init (doom-modeline-mode 1)
-    :custom ((doom-modeline-height 15)))
+    :custom ((doom-modeline-height 10)))
 #+end_src
 
 *** Transparency
@@ -206,9 +207,9 @@ Dash board for initial startup of emacs. [[https://github.com/emacs-dashboard/em
     (setq dashboard-startup-banner 1)
     (setq dashboard-center-content 1)
     (setq dashboard-show-shortcuts nil)
-    (setq dashboard-items '((recents  . 12)
-                            ;; (bookmarks . 5)
-                            (projects . 4)
+    (setq dashboard-items '((recents  . 5)
+                            (bookmarks . 5)
+                            (projects . 5)
                             (agenda . 5)
                             ;; (registers . 5)
                             ))
@@ -406,56 +407,67 @@ Works w/o being logged in.                         [[https://github.com/emacs-gr
 
 ** Keybindings
 #+begin_src emacs-lisp
-   ;; general improvements
+  ;; general improvements
   (global-set-key (kbd "<escape>") 'keyboard-escape-quit)
-   (global-set-key (kbd "C-x C-b") 'buffer-menu)   ;; open buffer menue in current buffer
-   (global-set-key (kbd "C-x C-k") 'kill-current-buffer)   ;; "C-x k" asks which buffer
-   (global-set-key (kbd "C-o") 'other-window)  ;; default is "C-x o"
-   (global-set-key (kbd "M-o") 'previous-multiframe-window)
-   (global-set-key (kbd "C-c C-c") 'eval-buffer)
-   (global-set-key (kbd "C-c C-r") 'eval-region)
+  (global-set-key (kbd "C-x C-b") 'buffer-menu)   ;; open buffer menue in current buffer
+  (global-set-key (kbd "C-x C-k") 'kill-current-buffer)   ;; "C-x k" asks which buffer
+  (global-set-key (kbd "C-o") 'other-window)  ;; default is "C-x o"
+  (global-set-key (kbd "M-o") 'previous-multiframe-window)
+  (global-set-key (kbd "C-c C-c") 'eval-buffer)
+  (global-set-key (kbd "C-c C-r") 'eval-region)
 
-   ;; Make font bigger/smaller.
-   (global-set-key (kbd "C-=") 'text-scale-increase)
-   (global-set-key (kbd "C--") 'text-scale-decrease)
-   (global-set-key (kbd "C-0") 'text-scale-adjust)
+  ;; make font bigger/smaller.
+  (global-set-key (kbd "C-=") 'text-scale-increase)
+  (global-set-key (kbd "C--") 'text-scale-decrease)
+  (global-set-key (kbd "C-0") 'text-scale-adjust)
 
-   ;; Org notes flow
-   (global-set-key (kbd "<f5>") 'org-store-link)
-   (global-set-key (kbd "<f6>") 'org-insert-link)
-  ;; (global-set-key (kbd "<f7>") 'org-agenda ;; set later!
-  (global-set-key (kbd "<f8>") 'org-html-export-to-html)
+  ;; writing/editing
+  (global-set-key (kbd "<f9>") 'ispell-word)
+  (global-set-key (kbd "<f10>") 'dictionary-lookup-definition)
 
-   ;; writing/editing
-   (global-set-key (kbd "<f9>") 'ispell-word)
-   (global-set-key (kbd "<f10>") 'dictionary-lookup-definition)
+  ;; Buffer-menu-mode
+  (define-key Buffer-menu-mode-map (kbd "C-o") 'other-window)
+  (define-key Buffer-menu-mode-map (kbd "M-o") 'previous-multiframe-window)
+  ;; "o" opens in another buffer and moves focus
+  ;; "C-M-o" opens in another buffer and keeps focus in the Buffer-menu
+  (define-key Buffer-menu-mode-map (kbd "C-M-o") 'Buffer-menu-switch-other-window)
 
-   ;; Buffer-menu-mode
-   (define-key Buffer-menu-mode-map (kbd "C-o") 'other-window)
-   (define-key Buffer-menu-mode-map (kbd "M-o") 'previous-multiframe-window)
-   ;; "o" opens in another buffer and moves focus
-   ;; "C-M-o" opens in another buffer and keeps focus in the Buffer-menu
-   (define-key Buffer-menu-mode-map (kbd "C-M-o") 'Buffer-menu-switch-other-window)
+  ;; bookmark-bmenue
+  (with-eval-after-load 'bookmark
+  (define-key bookmark-bmenu-mode-map (kbd "C-o") 'other-window)
+  (define-key bookmark-bmenu-mode-map (kbd "M-o") 'previous-multiframe-window)
+  (define-key bookmark-bmenu-mode-map (kbd "C-M-o") 'bookmark-bmenu-switch-other-window)
+  )
+  ;; compilation-mode
+  (define-key compilation-mode-map (kbd "C-o") 'other-window)
 
-   ;; compilation-mode
-   (define-key compilation-mode-map (kbd "C-o") 'other-window)
+  ;; grep-mode
+  (defun jmn-grep-keybindings()
+    (define-key grep-mode-map (kbd "o") 'compilation-display-error)
+    (define-key grep-mode-map (kbd "C-o") 'other-window))
 
-   ;; grep-mode
-   (defun jmn-grep-keybindings()
-     (define-key grep-mode-map (kbd "o") 'compilation-display-error)
-     (define-key grep-mode-map (kbd "C-o") 'other-window))
+  (add-hook 'grep-mode-hook #'jmn-grep-keybindings)
 
-   (add-hook 'grep-mode-hook #'jmn-grep-keybindings)
+  ;; adjust windows with keybindings
+  (global-set-key (kbd "C-<up>") 'enlarge-window)
+  (global-set-key (kbd "C-<down>") 'shrink-window)
+  (global-set-key (kbd "C-<right>") 'enlarge-window-horizontally)
+  (global-set-key (kbd "C-<left>") 'shrink-window-horizontally)
+
+  ;; non-org C-c <blank> bindings
+  (global-set-key (kbd "C-c r") 'revert-buffer)
+  (global-set-key (kbd "C-c =") 'vc-diff) ;; also bound to "C-x v ="
 #+end_src
-
-*Possible TODO:* create my own keybindings as shown [[https://www.youtube.com/watch?v=xaZMwNELaJY][here]]. hydra ties related commands into short bindings with a common prefix.
 
 ** Font size
 #+begin_src emacs-lisp
-  (set-face-attribute
-   'default nil
-   :height (assoc-default (system-name) '(("xps" . 115)
-                                          ("dsk" . 120))))
+  (defun jmn-set-font-height(value)
+    (interactive "nFont height (default is 100): ")
+    (set-face-attribute  'default nil :height value))
+
+  (jmn-set-font-height (alist-get (system-name) '(("xps" . 115)
+                                                  ("dsk" . 120))
+                                  100 nil 'string=)) ;; default is 100
 
   (setq text-scale-mode-step 1.05)
 #+end_src
@@ -488,17 +500,15 @@ Works w/o being logged in.                         [[https://github.com/emacs-gr
 
 * General Development
 ** Line numbers
-#+begin_src emacs-lisp :tangle no
+#+begin_src emacs-lisp
   (defun jmn-display-lines-for-long-files()
     (if (> (car (page--count-lines-page) ) 300)
         (display-line-numbers-mode 1)))
 
   (add-hook 'prog-mode-hook #'jmn-display-lines-for-long-files)
-
-  ;; exlusion list
-  ;;(dolist (mode '())
-  ;;  (add-hook mode (lambda () (display-line-numbers-mode 0))))
 #+end_src
+
+As of now, <2023-03-19 Sun>, python mode is not included in prog-mode so function is also added to python mode in the python section below.
 
 ** Flyspell comments
 #+begin_src emacs-lisp
@@ -942,21 +952,21 @@ The following keeps the compilation buffer if there are warnings or errors, and 
           org-src-fontify-natively t
           org-fontify-quote-and-verse-blocks t
           org-src-tab-acts-natively t
-          org-edit-src-content-indentation 2 ;; I think I undo this somewhere for de/tangling
+          org-edit-src-content-indentation 2 ;; I undo this somewhere 4tangling
           org-hide-block-startup nil
           org-src-preserve-indentation nil
           org-startup-folded 'content
           org-cycle-separator-lines 2
           org-capture-bookmark nil
           org-list-indent-offset 1
-          org-image-actual-width nil ; fix to allow picture resizing
-          org-return-follows-link t  ; keep for sure ;@work
-          org-use-speed-commands t ; try out
-          )
-    (setq org-agenda-tags-column
-        (assoc-default (system-name) '(("xps" . 75)
-                                       ("dsk" . 75)))) ;; default is auto
-    )
+          org-image-actual-width nil    ;; fix to allow picture resizing
+          org-return-follows-link t     ;; keep for sure ;@work
+          org-use-speed-commands t      ;; excellent
+          org-export-babel-evaluate nil ;; don't run src blocks on export
+          org-agenda-tags-column
+          (alist-get (system-name) '(("xps" . -85)
+                                     ("dsk" . -90))
+                     'auto nil 'string=))) ;; should all be auto?e
 #+end_src
 
 ** Bullets
@@ -1028,13 +1038,11 @@ Create a function to align the size of displayed latex framents with overall org
 
 ** Keybindings
 #+begin_src emacs-lisp
-  (global-set-key (kbd "C-c l") #'org-store-link)
-  (global-set-key (kbd "C-c a") #'org-agenda)
+  (global-set-key (kbd "C-c x") #'org-html-export-to-html)
+  (global-set-key (kbd "C-c s") #'org-store-link)
+  (global-set-key (kbd "C-c i") #'org-insert-link)
   (global-set-key (kbd "C-c c") #'org-capture)
-
-  (defun org-agenda-show-my-dashboard (&optional arg)
-    (interactive "P")
-    (org-agenda arg "d"))
+  (global-set-key (kbd "C-c a") (lambda (&optional args) (interactive "P") (org-agenda args " ")))
 #+end_src
 
 ** HTML
@@ -1044,19 +1052,35 @@ For syntax highlighting in export html, we want htmlize version > =1.34=
 (use-package htmlize)
 #+end_src
 
-*** HOLD Save to HTML on save
-- 2023-02-11 removing function, trying to not export as often
+*** Save to HTML on save
+To have an org file convert to html on save, add the file name to the =org-files-to-html-on-save= in the file's local variables. This can be done in one of two ways:
+#+begin_src org :tangle  no
+  # -*- eval: (jmn-export-to-html-on-save) -*-
+  ;; which *must* be the first line.
+#+end_src
 
-Figure out how to set this in the header properties rather than hardcoding here.
-#+begin_src emacs-lisp :tangle no
-  (defun jmn-org-export-html-on-save()
-    (interactive)
-    (when (member (buffer-file-name)
-                  '("/home/ape/.dotfiles/emacs.org"
-                    "/home/ape/Code_Project/PyTorchExamples/README.org"))
+Here we create a list of the files to convert on save and add a function to the after-save hook to
+reference this list.
+#+begin_src emacs-lisp
+  ;; initialize if not already
+  (if (not (bound-and-true-p jmn-org-files-to-html-on-save))
+      (setq  jmn-org-files-to-html-on-save nil))
+
+  (defun jmn-org-export-html-on-save-list()
+    (when (member (buffer-file-name)  jmn-org-files-to-html-on-save)
       (org-html-export-to-html)))
 
-  (add-hook 'after-save-hook 'jmn-org-export-html-on-save)
+  (add-hook 'after-save-hook #'jmn-org-export-html-on-save-list)
+
+  (defun jmn-export-to-html-on-save()
+    (interactive)
+     (add-to-list 'jmn-org-files-to-html-on-save (buffer-file-name)))
+#+end_src
+
+**** Make the local eval "safe"
+The following removes the prompt when loading the buffer with the local variable
+#+begin_src emacs-lisp
+    (add-to-list 'safe-local-variable-values '(eval jmn-export-to-html-on-save))
 #+end_src
 
 * Agenda/GTD
@@ -1073,7 +1097,8 @@ Following the tutorial [[https://emacs.cafe/emacs/orgmode/gtd/2017/06/30/orgmode
 =Shift-right=  :  advance the todo state
 
 #+begin_src emacs-lisp
-  ;; Org Agenda ;; (setq org-agenda-window-setup 'reorganize-frame)
+  ;; Org Agenda
+  (setq org-agenda-window-setup 'other-window) ;; other good option: reorganize-frame
   ;; Exited with ‘q’ or ‘x’ and the old state is restored.
   (setq org-agenda-restore-windows-after-quit 1)
   (setq org-agenda-span 'day)
@@ -1153,15 +1178,6 @@ Following the tutorial [[https://emacs.cafe/emacs/orgmode/gtd/2017/06/30/orgmode
          (interactive)
          (find-file (concat org-directory "someday.org")))
 
-  ;; remove "C-c a" for something else later?
-  (global-set-key (kbd "C-c a") (lambda (&optional args)
-                                  (interactive "P")
-                                  (org-agenda args " ")))
-
-  (global-set-key (kbd "<f7>") (lambda (&optional args)
-                                  (interactive "P")
-                                  (org-agenda args " ")))
-
   (setq org-agenda-todo-ignore-scheduled 'all) ;; cant get it to work for deadlines
 #+end_src
 
@@ -1173,8 +1189,9 @@ File holding habits must be added to =org-agenda-files= above
   (require 'org-habit)
   (add-to-list 'org-modules 'org-habit)
   (setq org-habit-graph-column
-        (assoc-default (system-name) '(("xps" . 56)
-                                       ("dsk" . 52)))) ;; default is 40
+        (alist-get (system-name) '(("xps" . 56)
+                                   ("dsk" . 52))
+                                 50 nil 'string=)) ;; default is 40
 #+end_src
 
 ** Capture Templates
@@ -1460,7 +1477,7 @@ Just some changes to make it feel more like the other modes.
 #+end_src
 
 *** Doom-one
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :tangle no
     (use-package doom-themes)
   (defun jmn-load-doom-one()
       "doom-one for dark time"
@@ -1488,8 +1505,6 @@ Just some changes to make it feel more like the other modes.
 ** Default and time switches
 #+begin_src emacs-lisp
    (jmn-load-gruvbox-dark-hard)
-  ;; (run-at-time "7:00 am" nil #'jmn-load-doom-one-light)
-  ;; (run-at-time "4:30 pm" nil #'jmn-load-doom-one)
 #+end_src
 
 * Localwords                                                       :noexport:
