Add makefile to org babel

--- a/emacs.org
+++ b/emacs.org
@@ -996,6 +996,7 @@ Use # -*- org-src-preserve-indentation: t; -*- when doing tangle/detangle with p
                                (append org-babel-load-languages
                                        '((shell  . t)
                                          (python . t)
+                                         (makefile . t)
                                          (latex  . t)
                                          (C      . t))))
 
@@ -1005,6 +1006,7 @@ Use # -*- org-src-preserve-indentation: t; -*- when doing tangle/detangle with p
     ;; This is needed as of Org 9.2
     (require 'org-tempo)
     (add-to-list 'org-structure-template-alist '("la" . "src latex"))
+    (add-to-list 'org-structure-template-alist '("m" . "src makefile"))
     (add-to-list 'org-structure-template-alist '("js" . "src js"))
     (add-to-list 'org-structure-template-alist '("sh" . "src shell"))
     (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
