add nvidia notes and changed doc names to snake case

--- a/README.org
+++ b/README.org
@@ -1,10 +1,8 @@
 #+TITLE: Hack Configuration
 
-Be it known, here lies a fledgling Emacs configuration used for C++ and Python development as well as for general note taking and writing. The configuration is written in the /literate programming/ style via Org-Babel in the emacs.org file.
+Be it known, here lies my computational castle which mostly consists of an [[https://raw.githack.com/JohnNehls/.dotfiles/master/emacs.html][Emacs configuration]] and some sparse [[./linuxSetupDocs][Linux notes]], all written in the /literate programming/ style via Org-Babel in the emacs.org file.
 
-For a more thorough configuration see [[https://github.com/daviwil/emacs-from-scratch]].
-
-Note: the repository also stores my relatively basic =.bashrc= and =.ipython= (and maybe more) configurations.
+For a more thorough Emacs configuration see [[https://github.com/daviwil/emacs-from-scratch]].
 
 * Installation
 Execute the following commands starting wherever you'd like to place this repo:
