--- a/linuxSetupDocs/nvidia_pytorch_tensorflow.org
+++ b/linuxSetupDocs/nvidia_pytorch_tensorflow.org
@@ -74,7 +74,12 @@ Thu May 25 13:13:16 2023
 
 * Pytorch
 Simple. Note the version of CUDA (upper right corner of nvidia-smi)
-and select versions in https://pytorch.org/get-started/locally/ and use the provided command.
+ancd ..d select versions in https://pytorch.org/get-started/locally/ and use the provided command.
+
+** Test code
+#+begin_src shell
+run_cifar
+#+end_src
 
 
 * TensorFlow
